test/libsolidity/syntaxTests/literalSuffixes/suffixableLiterals/invalid_suffixed_decimal_octal.sol
function suffix(uint value) pure suffix returns (uint) { return value; }

contract C {
    uint x = 000.10 suffix;
}
// ----
// ParserError 8936: (100-101): Octal numbers not allowed.
